--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
+blinker==1.9.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
 filelock==3.16.1
+Flask==3.1.0
 fsspec==2024.10.0
 grpcio==1.68.0
 grpcio-tools==1.68.0
+idna==3.10
+itsdangerous==2.2.0
 Jinja2==3.1.4
 joblib==1.4.2
 MarkupSafe==2.1.5
@@ -14,6 +21,7 @@ protobuf==5.28.3
 python-dateutil==2.9.0.post0
 pytz==2024.2
 pyzmq==26.2.0
+requests==2.32.3
 scikit-learn==1.5.2
 scipy==1.14.1
 setuptools==75.6.0
@@ -26,10 +34,6 @@ torchvision==0.20.0.dev20241121
 tqdm==4.67.0
 typing_extensions==4.12.2
 tzdata==2024.2
+urllib3==2.2.3
+Werkzeug==3.1.3
 zmq==0.0.0
-flask>=2.0.0
-torch>=1.9.0
-torchvision>=0.10.0
-numpy>=1.19.0
-zmq>=22.0.0
-tqdm>=4.60.0
