--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,41 @@
+bidict==0.23.1
 blinker==1.9.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
+dnspython==2.7.0
+eventlet==0.38.0
 filelock==3.16.1
 Flask==3.1.0
+Flask-Cors==5.0.0
+Flask-SocketIO==5.4.1
 fsspec==2024.10.0
+greenlet==3.1.1
 grpcio==1.68.0
 grpcio-tools==1.68.0
+h11==0.14.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
-joblib==1.4.2
-MarkupSafe==2.1.5
+MarkupSafe==3.0.2
 mpmath==1.3.0
 networkx==3.4.2
-numpy==2.1.3
-pandas==2.2.3
+numpy==2.2.0rc1
 pillow==11.0.0
-protobuf==5.28.3
-python-dateutil==2.9.0.post0
-pytz==2024.2
+protobuf==5.29.0
+python-engineio==4.10.1
+python-socketio==5.11.4
 pyzmq==26.2.0
 requests==2.32.3
-scikit-learn==1.5.2
-scipy==1.14.1
 setuptools==75.6.0
-six==1.16.0
+simple-websocket==1.1.0
 sympy==1.13.1
-threadpoolctl==3.5.0
-torch==2.6.0.dev20241121
-torchaudio==2.5.0.dev20241121
-torchvision==0.20.0.dev20241121
-tqdm==4.67.0
+torch==2.5.1
+torchaudio==2.5.1
+torchvision==0.20.1
+tqdm==4.67.1
 typing_extensions==4.12.2
-tzdata==2024.2
 urllib3==2.2.3
 Werkzeug==3.1.3
+wsproto==1.2.0
 zmq==0.0.0
